kubernetes/apps/homepage/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-public
  namespace: homepage
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - "michaelmuzafarov.dev"
  rules:
    - backendRefs:
        - name: homepage
          port: 8080
